--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,8 @@
     <aws-sdk.version>2.13.20</aws-sdk.version>
     <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
     <junit.version>5.7.1</junit.version>
+    <slf4j.version>1.7.30</slf4j.version>
+    <mockk.version>1.9.3</mockk.version>
   </properties>
 
   <dependencies>
@@ -73,6 +75,11 @@
       <version>${kotlin.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.jetbrains.kotlin</groupId>
       <artifactId>kotlin-test</artifactId>
       <version>${kotlin.version}</version>
@@ -82,6 +89,18 @@
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
       <version>${junit.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.mockk</groupId>
+      <artifactId>mockk</artifactId>
+      <version>${mockk.version}</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>${slf4j.version}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
