--- a/pom.xml
+++ b/pom.xml
@@ -25,14 +25,14 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <maven.compiler.source>${java.version}</maven.compiler.source>
-    <maven.compiler.target>{java.version}</maven.compiler.target>
+    <maven.compiler.target>${java.version}</maven.compiler.target>
 
-    <kotlin.version>1.6.21</kotlin.version>
-    <kotlinx.serialization.version>1.4.1</kotlinx.serialization.version>
-    <aws-sdk.version>2.20.93</aws-sdk.version>
+    <kotlin.version>1.9.10</kotlin.version>
+    <kotlinx.serialization.version>1.6.0</kotlinx.serialization.version>
+    <aws-sdk.version>2.20.162</aws-sdk.version>
     <slf4j.version>1.7.36</slf4j.version>
 
-    <junit.version>5.9.3</junit.version>
+    <junit.version>5.10.0</junit.version>
     <mockk.version>1.12.5</mockk.version>
 
     <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
@@ -108,7 +108,7 @@
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
+          <version>3.1.1</version>
         </plugin>
       </plugins>
     </pluginManagement>
