feat: use default gh token for dependency resolution

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,10 +58,7 @@ jobs:
 
       - name: resolve dependencies
         env:
-          # NOTE: Use the following token if your project does not depend on private packages:
-          # GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          # NOTE: Use the following token if your project depends on private packages:
-          GITHUB_TOKEN: ${{ secrets.SHARED_GITHUB_PACKAGES_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: mvn -B dependency:resolve
 
       - name: conditional release
