feat: update renovate version pinning

--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
   "extends": [
     "github>capraconsulting/renovate-config:library",
-    "github>capraconsulting/renovate-config:aggressive"
+    "github>capraconsulting/renovate-config:aggressive",
+    "helpers:pinGitHubActionDigestsToSemver"
   ]
 }
