--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
     <mockk.version>1.13.12</mockk.version>
 
     <maven-surefire-plugin.version>3.3.1</maven-surefire-plugin.version>
-    <ktlint-maven-plugin.version>3.2.0</ktlint-maven-plugin.version>
+    <spotless-maven-plugin.version>2.43.0</spotless-maven-plugin.version>
+    <ktfmt.version>0.46</ktfmt.version>
     <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
   </properties>
 
@@ -208,18 +209,41 @@
         </executions>
       </plugin>
 
+      <!-- spotless with ktfmt for code style -->
       <plugin>
-        <groupId>com.github.gantsign.maven</groupId>
-        <artifactId>ktlint-maven-plugin</artifactId>
-        <version>${ktlint-maven-plugin.version}</version>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>${spotless-maven-plugin.version}</version>
         <executions>
           <execution>
-            <id>check</id>
             <goals>
               <goal>check</goal>
             </goals>
+            <phase>validate</phase>
           </execution>
         </executions>
+        <configuration>
+          <formats>
+            <format>
+              <includes>
+                <include>*.md</include>
+                <include>.gitignore</include>
+              </includes>
+              <trimTrailingWhitespace/>
+              <endWithNewline/>
+              <indent>
+                <spaces>true</spaces>
+                <spacesPerTab>2</spacesPerTab>
+              </indent>
+            </format>
+          </formats>
+          <kotlin>
+            <ktfmt>
+              <version>${ktfmt.version}</version>
+              <style>DEFAULT</style>
+            </ktfmt>
+          </kotlin>
+        </configuration>
       </plugin>
 
     </plugins>
