--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
@@ -38,7 +38,7 @@
     <kotlin.version>2.2.10</kotlin.version>
     <kotlinx.serialization.version>1.9.0</kotlinx.serialization.version>
     <aws-sdk.version>2.32.28</aws-sdk.version>
-    <liflig-logging.version>2.20250821.134532</liflig-logging.version>
+    <liflig-logging.version>2.20250907.111253</liflig-logging.version>
 
     <!-- Testing -->
     <junit.version>5.13.4</junit.version>
