--- a/pom.xml
+++ b/pom.xml
@@ -29,26 +29,28 @@
     <major-version>2</major-version>
     <revision>${major-version}.local-SNAPSHOT</revision>
 
-    <java.version>1.8</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+    <!-- Required by JUnit  -->
+    <java.version>17</java.version>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
 
     <kotlin.version>2.2.20</kotlin.version>
     <kotlinx.serialization.version>1.9.0</kotlinx.serialization.version>
-    <aws-sdk.version>2.33.8</aws-sdk.version>
-    <liflig-logging.version>2.20251016.061516</liflig-logging.version>
+    <aws-sdk.version>2.35.8</aws-sdk.version>
+    <liflig-logging.version>2.20251016.073034</liflig-logging.version>
 
     <!-- Testing -->
-    <junit.version>5.13.4</junit.version>
-    <mockk.version>1.14.5</mockk.version>
-    <logback.version>1.5.18</logback.version>
+    <junit.version>6.0.0</junit.version>
+    <mockk.version>1.14.6</mockk.version>
+    <logback.version>1.5.19</logback.version>
 
-    <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
     <spotless-maven-plugin.version>3.0.0</spotless-maven-plugin.version>
     <ktfmt.version>0.58</ktfmt.version>
-    <flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
+    <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
   </properties>
 
   <dependencyManagement>
@@ -173,6 +175,7 @@
               <goal>compile</goal>
             </goals>
             <configuration>
+              <jvmTarget>${java.version}</jvmTarget>
               <sourceDirs>
                 <source>${project.basedir}/src/main/kotlin</source>
               </sourceDirs>
